# homerun

./: .gitignore  CMakeLists.txt  CONFIG_PLAN.md  CONFIG_PLAN2.md  COPYING  ExtraDesktop.sh  LGPL_HEADER  Messages.sh  NEWS  OVERVIEW.md  PLUGIN_PLAN.md  README.md  README_MODELS  README_MODELS.md  README_PACKAGERS.md  changenotifier.h  groupedinstalledappsmodel.cpp  groupedinstalledappsmodel.h  homerun-source-appswithfilters.desktop  homerun_config.h.in  installedappsmodel.cpp  installedappsmodel.h
applet/: CMakeLists.txt  configkeys.h  homerunlauncher.cpp  homerunlauncher.h  plasma-applet-homerunlauncher.desktop  plasma-applet-homerunlauncher.desktop.cmake  sallauncher.cpp  sallauncher.h
components/: CMakeLists.txt  aboutapplicationdialog.cpp  aboutapplicationdialog.h  abstractsource.cpp  abstractsource.h  abstractsourceregistry.cpp  abstractsourceregistry.h  action.cpp  action.h  actionmanager.cpp  actionmanager.h  componentsplugin.cpp  componentsplugin.h  configdialog.cpp  configdialog.h  customtypes.h  dirconfigurationwidget.cpp  dirmodel.cpp  dirmodel.h  favoriteappsmodel.cpp  favoriteappsmodel.h  favoritemodel.cpp  favoritemodel.h  favoriteplacesmodel.cpp  favoriteplacesmodel.h  favoritesmodel.cpp  favoritesmodel.h  globalsettings.cpp  globalsettings.h  groupedinstalledappsmodel.cpp  groupedinstalledappsmodel.h  groupedservicemodel.cpp  groupedservicemodel.h  haloeffect.cpp  haloeffect.h  helpmenuactions.cpp  helpmenuactions.h  icondialog.cpp  icondialog.h  image.cpp  (+53 more)
components/qml/: ActionMenu.qml  DragArea.qml  DragContainer.qml  Label.qml  TabBar.qml  TabButton.qml  TabGroup.qml  qmldir
components/qml/private/: TabBarLayout.qml  TabGroup.js
components/sources/: CMakeLists.txt
components/sources/dir/: dirconfigurationwidget.h  dirmodel.cpp  dirmodel.h
components/sources/favorites/: favoriteappsmodel.cpp  favoriteappsmodel.h  favoriteplacesmodel.cpp  favoriteplacesmodel.h  favoriteutils.cpp  favoriteutils.h  fileplacesmodel.cpp  fileplacesmodel.h
components/sources/installedapps/: changenotifier.cpp  changenotifier.h  filterableinstalledappsmodel.cpp  filterableinstalledappsmodel.h  groupedinstalledappsmodel.cpp  groupedinstalledappsmodel.h  installedappsconfigurationwidget.cpp  installedappsconfigurationwidget.h  installedappsmodel.cpp  installedappsmodel.h
components/sources/power/: combinedpowersessionmodel.cpp  combinedpowersessionmodel.h  combinedsessionpowermodel.cpp  powermodel.cpp  (+2 more)
examples/helloworld/: CMakeLists.txt  helloworld.cpp  homerun-source-helloworld.desktop
examples/multisources/: CMakeLists.txt  homerun-source-multisources.desktop  multisources.cpp  multisources.h
fixes/: CMakeLists.txt  DeclarativeDragArea.cpp  DeclarativeDragArea.h  Label.qml  README.md  appletproxy.cpp  appletproxy.h  datamodel.cpp  datamodel.h  dialog.cpp  fixesplugin.cpp  fixesplugin.h  qmldir  runnermodel.cpp  runnermodel.h  salfixesplugin.cpp  salfixesplugin.h  sourcelistmodel.cpp  sourcelistmodel.h  toolboxtoggle.cpp  toolboxtoggle.h  urlconverter.cpp
fixes/qml/: TextField.qml  qmldir
fullscreen/applet/: CMakeLists.txt  configmanager.cpp  configmanager.h  generalconfigpage.ui  homerunlauncher.cpp  homerunlauncher.h  plasma-applet-homerunlauncher.desktop.cmake
kicker/components/: CMakeLists.txt  appletproxy.cpp  appletproxy.h  fadeouteffect.cpp  fadeouteffect.h  fadeoutitem.cpp  fadeoutitem.h  kickerplugin.cpp  kickerplugin.h  processrunner.cpp  processrunner.h  qmldir  sourcelistmodel.cpp  sourcelistmodel.h  urlconverter.cpp  urlconverter.h  windowsystem.cpp  windowsystem.h
lib/: CMakeLists.txt  Doxyfile.in  HomerunConfig.cmake.in  abstractsource.cpp  abstractsource.h  abstractsourceregistry.cpp  abstractsourceregistry.h  actionlist.cpp  actionlist.h  homerun-source.desktop  homerun_export.h  homerunmodel.dox  homerunmodel.md  libhomerun_config.h.in  mainpage.md  pathmodel.cpp  pathmodel.h  placesmodel.cpp  placesmodel.h  runnermodel.cpp  runnermodel.h  servicemodel.cpp  servicemodel.h  sourceconfigurationwidget.cpp  sourceconfigurationwidget.h  sourceid.cpp  sourceid.h  sourceregistry.cpp  sourceregistry.h
lib/private/: abstractsourceregistry.cpp  abstractsourceregistry.h  dirconfigurationwidget.cpp  dirconfigurationwidget.h  dirconfigurationwidget.ui  dirmodel.cpp  dirmodel.h  favoriteappsmodel.cpp  favoriteappsmodel.h  favoriteplacesmodel.cpp  favoriteplacesmodel.h  groupedinstalledappsmodel.cpp  groupedinstalledappsmodel.h  groupedservicemodel.cpp  groupedservicemodel.h  installedappsconfigurationwidget.cpp  installedappsconfigurationwidget.h  installedappsmodel.cpp  installedappsmodel.h  placesmodel.cpp  placesmodel.h  powermodel.cpp  runnerconfigurationwidget.cpp  runnerconfigurationwidget.h  runnerconfigurationwidget.ui  runnermodel.cpp  runnermodel.h  servicemodel.cpp  servicemodel.h  sessionmodel.cpp  sessionmodel.h  sourceconfigurationdialog.cpp  sourceconfigurationdialog.h  sourceregistry.cpp  sourceregistry.h
package/: CMakeLists.txt  metadata.desktop  metadata.desktop.cmake
plugins/clocks/: CMakeLists.txt  clocks.cpp  clocks.h  homerun-source-clocks.desktop
plugins/helloworld/: CMakeLists.txt  helloworld.cpp  helloworld.h  homerun-source-helloworld.desktop
plugins/multisources/: CMakeLists.txt  multisources.cpp
plugins/recentdocuments/: CMakeLists.txt  homerun-source-recentdocuments.desktop  recentdocuments.cpp  recentdocuments.h
plugins/singlerunner/: CMakeLists.txt  homerun-source-singlerunner.desktop  singlerunner.cpp  singlerunner.h
shell/: CMakeLists.txt  fullview.cpp  fullview.h  homerunviewer.desktop  main.cpp  org.kde.homerunviewer.xml  org.kde.salviewer.xml
tests/auto/: CMakeLists.txt  dirmodeltest.cpp  dirmodeltest.h  favoriteappsmodeltest.cpp  favoriteappsmodeltest.h  favoritemodeltest.cpp  favoritemodeltest.h  favoriteplacesmodeltest.cpp  favoriteplacesmodeltest.h  i18nconfigtest.cpp  i18nconfigtest.h  pagemodeltest.cpp  pagemodeltest.h  placesmodeltest.cpp  placesmodeltest.h  runnerinfoprovidertest.cpp  runnerinfoprovidertest.h  sourcemodeltest.cpp  sourcemodeltest.h  tabmodeltest.cpp  tabmodeltest.h
(+150 files in other folders)
